--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-game_project/game_project.runs
-game_project/game_project.cache
+game_project/game_project.runs/*
+game_project/game_project.cache/*
